# embedded-rust-esp32

./: Cargo.toml  README.md  memory.x  st_nucleo_f7.cfg
src/: main.rs
