[package]
name = "embedded-rust-esp32"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"

[[bin]]
name = "embedded-rust-esp32"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
